fix spacing issues

--- a/themes/datascribe/static/css/style.css
+++ b/themes/datascribe/static/css/style.css
@@ -17,7 +17,7 @@ h1.page {
     text-align:center;
     color:#4B66B0;
     width:100%;
-    margin-top:2rem;
+    margin-top:1rem;
     line-height: normal;
     text-indent: 0px;
     font-size:3rem;
@@ -129,13 +129,9 @@ a {
     background-color:#A85A98;
 }
 
-.grid-container {
-    padding-top:2rem;
-}
-
 @media screen and (min-width: 40em) {
     .grid-container {
-        padding-top:4rem;
+        padding-top:2rem;
     }
 }
 
@@ -143,9 +139,9 @@ a {
     font-size:2rem
 }
 
-.grid-container.nav{
+/* .grid-container.nav{
     padding-top:1rem;
-}
+} */
 
 .page{
     max-width:90%;
